--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,37 +1,40 @@
 <com.nino.hrckaraoke.MainLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
-     <LinearLayout
+
+    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#3A3A3A"
         android:orientation="vertical" >
-        
-         	<TextView
-                android:id="@+id/Select"
-                android:layout_width="wrap_content"
-                android:paddingLeft="10dp"
-                android:layout_height="50dip"
-                android:text="Select"
-                android:textColor="@android:color/black"
-                android:textSize="24dip" />  
-                
-         	 <TextView
-			     android:layout_width="match_parent"
-			     android:layout_height="1dp"
-			     android:background="#ffffff"
-			   
-			      />
-                
-         	
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="vertical" >
+
+            <com.nino.hrckaraoke.RoundImageView
+                android:id="@+id/imageView1"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_gravity="center_vertical"
+                android:paddingTop="10dp"
+                android:src="@drawable/ic_launcher" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#000000" />
 
         <ListView
             android:id="@+id/menu_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            
-            android:cacheColorHint="#00000000" >
+            android:cacheColorHint="#00000000"
+            android:divider="#616161"
+            android:dividerHeight="1dp" >
         </ListView>
     </LinearLayout>
 
@@ -40,49 +43,45 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
-		
+
         <!-- This acts as Actionbar -->
+
         <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:background="#AB1616"
-	        android:orientation="horizontal" >
-            
-        
-            
-             <ImageButton
-		        android:id="@+id/button_menu"
-		    	android:layout_width="50dip"
-		    	android:layout_height="50dip"
-		    	 android:onClick="toggleMenu"
-		    	android:background="@drawable/states"
-		    	android:src="@drawable/options"
-		    	/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#AB1616"
+            android:orientation="horizontal" >
+
+            <ImageButton
+                android:id="@+id/button_menu"
+                android:layout_width="50dip"
+                android:layout_height="50dip"
+                android:background="@drawable/states"
+                android:onClick="toggleMenu"
+                android:src="@drawable/options" />
+
             <TextView
-			     android:layout_width="1dp"
-			     android:layout_height="fill_parent"
-			     android:background="#ffffff"
-			   
-			      />
+                android:layout_width="1dp"
+                android:layout_height="fill_parent"
+                android:background="#ffffff" />
+
             <TextView
-			     android:layout_width="0dp"
-			     android:layout_height="fill_parent"
-			     android:text="Make Request"
-			     android:gravity="center_vertical"
-			     android:textSize="26dp"
-			     android:id="@+id/activity_main_content_title"
-			     android:layout_weight="1" />
-            
-        </LinearLayout>       
-        
+                android:id="@+id/activity_main_content_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Make Request"
+                android:textColor="#ffffff"
+                android:textSize="22dp" />
+        </LinearLayout>
+
         <!-- This is where fragment will show up -->
+
         <FrameLayout
-		    android:id="@+id/activity_main_content_fragment"
-		    android:layout_width="match_parent"
-		    android:layout_height="match_parent" >
-        
-    	</FrameLayout>
-        
+            android:id="@+id/activity_main_content_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+        </FrameLayout>
     </LinearLayout>
 
 </com.nino.hrckaraoke.MainLayout>
