--- a/res/layout/mostpopularrow.xml
+++ b/res/layout/mostpopularrow.xml
@@ -16,7 +16,7 @@ android:layout_height="?android:attr/listPreferredItemHeight">
     >
    
     <TextView
-        android:id="@+id/feedtxt"
+        android:id="@+id/popularrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Display Name"
