--- a/res/layout/menurow.xml
+++ b/res/layout/menurow.xml
@@ -11,9 +11,16 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:orientation="vertical"
+    android:orientation="horizontal"
    
     >
+    
+        <ImageView
+        android:id="@+id/imageView1"
+    android:layout_gravity="center_vertical"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/ic_launcher" />
    
     <TextView
         android:id="@+id/menutxt"
