created Your Request file

--- a/res/layout/mostpopulartab.xml
+++ b/res/layout/mostpopulartab.xml
@@ -8,7 +8,7 @@
     <ListView
         android:id="@+id/popularlist"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:divider="#e5e5e5"
          >
     </ListView>
