--- a/res/layout/mostpopulartab.xml
+++ b/res/layout/mostpopulartab.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="#e5e5e5"
+        android:background="#e5e5e5"
          >
     </ListView>
 
