--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -75,7 +75,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Make Request"
                 android:textColor="#ffffff"
                 android:textSize="22dp"
                 />
@@ -85,6 +84,17 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             />
+
+              <EditText
+                  android:id="@+id/editText1"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_weight="1"
+                  android:hint="search"
+                  android:ems="10" >
+
+                  <requestFocus />
+              </EditText>
 
         </LinearLayout>
 
