--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
             android:layout_weight="1"
             />
 
-              <EditText
+              <AutoCompleteTextView
                   android:id="@+id/editText1"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
@@ -94,7 +94,7 @@
                   android:ems="10" >
 
                   <requestFocus />
-              </EditText>
+              </AutoCompleteTextView>
 
         </LinearLayout>
 
